change to object dot notation

--- a/femto-access-point/Makefile
+++ b/femto-access-point/Makefile
@@ -35,9 +35,9 @@ x-dummy-small-cell-dt.xml: x-dummy-small-cell.xml
 test:
 	@echo "Do nothing usefull"
 	$(REPORT) -report=text x-small-cell-mme-1.0.xml
-	$(REPORT) -report=text x-small-cell-sgw-1.0.xml
-	$(REPORT) -report=text x-small-cell-pgw-1.0.xml
-	$(REPORT) -report=text x-small-cell-hss-1.0.xml
+	# $(REPORT) -report=text x-small-cell-sgw-1.0.xml
+	# $(REPORT) -report=text x-small-cell-pgw-1.0.xml
+	# $(REPORT) -report=text x-small-cell-hss-1.0.xml
 	# $(REPORT) -report=text ../base/cwmp/tr-196-2-0-1.xml
 
 clean:
