--- a/femto-access-point/Makefile
+++ b/femto-access-point/Makefile
@@ -5,16 +5,21 @@ default: all
 REPORT = perl ../scripts/report.pl --include=../base/cwmp --loglevel=error --nowarnbibref
 BASELINE = ../base/cwmp/tr-181-2-4.xml  ../base/cwmp/tr-098-1-6.xml  ../base/cwmp/tr-196-2-0.xml
 X-VENDOR = x-small-cell181.xml x-small-cell098.xml x-small-cell196.xml
-X-VENDOR-DOC = $(patsubst %.xml,%.html,$(X-VENDOR))
+X-VENDOR-DOC = 
+
 TARGETS = x-small-cell-mme-1.0-dt.xml 	\
 	x-small-cell-sgw-1.0-dt.xml	\
 	x-small-cell-pgw-1.0-dt.xml 	\
-	x-small-cell-hss-1.0-dt.xml	
+	x-small-cell-hss-1.0-dt.xml	\
+	x-small-cell-enb-1.0-dt.xml 	\
+	x-small-cell-ue-1.0-dt.xml 	
+
+TARGETS-DOC = $(patsubst %.xml,%.html,$(TARGETS))
 
 
 all: $(TARGETS) 
 
-doc: $(X-VENDOR-DOC)
+doc: $(X-VENDOR-DOC) $(TARGETS-DOC)
 
 DUMMY-PROFILE = --dtspec="urn:small-cell-org:dummy-1-0-0" \
 		--dtprofile=Baseline:3 			\
@@ -34,10 +39,11 @@ x-dummy-small-cell-dt.xml: x-dummy-small-cell.xml
 
 test:
 	@echo "Do nothing usefull"
-	$(REPORT) -report=text x-small-cell-mme-1.0.xml
+	# $(REPORT) -report=text x-small-cell-mme-1.0.xml
 	# $(REPORT) -report=text x-small-cell-sgw-1.0.xml
 	# $(REPORT) -report=text x-small-cell-pgw-1.0.xml
 	# $(REPORT) -report=text x-small-cell-hss-1.0.xml
+	$(REPORT) -report=text x-small-cell-ue-1-0.xml
 	# $(REPORT) -report=text ../base/cwmp/tr-196-2-0-1.xml
 
 clean:
