--- a/femto-access-point/Makefile
+++ b/femto-access-point/Makefile
@@ -3,17 +3,13 @@ default: all
 .PHONY: test
 
 REPORT = perl ../scripts/report.pl --include=../base/cwmp --loglevel=error --nowarnbibref
+
 BASELINE = ../base/cwmp/tr-181-2-4.xml  ../base/cwmp/tr-098-1-6.xml  ../base/cwmp/tr-196-2-0.xml
+
 X-VENDOR = x-small-cell181.xml x-small-cell098.xml x-small-cell196.xml
-X-VENDOR-DOC = 
+X-VENDOR-DOC = $(patsubst %.xml,%.html,$(X-VENDOR))
 
-TARGETS = x-small-cell-mme-1.0-dt.xml 	\
-	x-small-cell-sgw-1.0-dt.xml	\
-	x-small-cell-pgw-1.0-dt.xml 	\
-	x-small-cell-hss-1.0-dt.xml	\
-	x-small-cell-enb-1.0-dt.xml 	\
-	x-small-cell-ue-1.0-dt.xml 	
-
+TARGETS = x-dummy-small-cell-dt.xml
 TARGETS-DOC = $(patsubst %.xml,%.html,$(TARGETS))
 
 
@@ -39,15 +35,9 @@ x-dummy-small-cell-dt.xml: x-dummy-small-cell.xml
 
 test:
 	@echo "Do nothing usefull"
-	# $(REPORT) -report=text x-small-cell-mme-1.0.xml
-	# $(REPORT) -report=text x-small-cell-sgw-1.0.xml
-	# $(REPORT) -report=text x-small-cell-pgw-1.0.xml
-	# $(REPORT) -report=text x-small-cell-hss-1.0.xml
-	# $(REPORT) -report=text x-small-cell-ue-1-0.xml
-	$(REPORT) -report=text x-small-cell-enb-1.0.xml
-	# $(REPORT) -report=text ../base/cwmp/tr-196-2-0-1.xml
+	$(REPORT) -report=text x-dummy-small-cell-dt.xml
 
 clean:
-	$(RM) $(TARGETS) $(X-VENDOR-DOC)
+	$(RM) $(TARGETS) $(TARGETS-DOC) $(X-VENDOR-DOC)
 
-include ../scripts/report.mk
+include ../report.mk
