add erlang header generator

--- a/lte-packet-core/Makefile
+++ b/lte-packet-core/Makefile
@@ -2,7 +2,7 @@ default: all
 
 .PHONY: test
 
-REPORT = perl ../scripts/report.pl --include=../base/cwmp --loglevel=error --nowarnbibref
+REPORT = perl -I../scripts/plugins/erl ../scripts/report.pl --include=../base/cwmp --loglevel=error --nowarnbibref
 BASELINE = ../base/cwmp/tr-181-2-4.xml  ../base/cwmp/tr-098-1-6.xml  ../base/cwmp/tr-196-2-0.xml
 
 TARGETS = x-small-cell-mme-1.0-dt.xml 	\
@@ -18,6 +18,8 @@ all: $(TARGETS)
 
 doc: $(TARGETS-DOC)
 
+gen-hrl: 
+	$(REPORT) --plugin=hrl --report=hrl x-small-cell-ue-1-0.xml
 
 test:
 	@echo "Do nothing usefull"
