fix type generation

--- a/lte-packet-core/Makefile
+++ b/lte-packet-core/Makefile
@@ -1,6 +1,6 @@
 default: all
 
-.PHONY: test
+.PHONY: test gen-hrl 
 
 REPORT = perl -I../scripts/plugins ../scripts/report.pl --include=../base/cwmp --loglevel=error --nowarnbibref
 BASELINE = ../base/cwmp/tr-181-2-4.xml  ../base/cwmp/tr-098-1-6.xml  ../base/cwmp/tr-196-2-0.xml
