--- a/femto-access-point/Makefile
+++ b/femto-access-point/Makefile
@@ -1,8 +1,8 @@
 default: all
 
-.PHONY: test
+.PHONY: test gen-hrl gen-txt
 
-REPORT = perl -I../scripts/plugins ../scripts/report.pl --include=../base/cwmp --loglevel=error --nowarnbibref
+REPORT = perl -X -I../scripts/plugins ../scripts/report.pl --include=../base/cwmp --loglevel=error --nowarnbibref
 
 BASELINE = ../base/cwmp/tr-181-2-4.xml  ../base/cwmp/tr-098-1-6.xml  ../base/cwmp/tr-196-2-0.xml
 
@@ -11,33 +11,41 @@ X-VENDOR-DOC = $(patsubst %.xml,%.html,$(X-VENDOR))
 
 TARGETS = x-dummy-small-cell-dt.xml
 TARGETS-DOC = $(patsubst %.xml,%.html,$(TARGETS))
+TARGETS-HRL = $(patsubst %.xml,%.hrl,$(TARGETS))
+TARGETS-TXT = $(patsubst %.xml,%.txt,$(TARGETS))
 
 
-all: $(TARGETS) 
+all: $(TARGETS)
 
 doc: $(X-VENDOR-DOC) $(TARGETS-DOC)
 
 DUMMY-PROFILE = --dtspec="urn:small-cell-org:dummy-1-0-0" \
-		--dtprofile=Baseline:3 			\
+		--dtprofile=Baseline:1			\
+		--dtprofile=Baseline:3			\
 		--dtprofile=FAP_GPS:1 			\
 		--dtprofile=FAP_Tunnel:1 		\
-		--dtprofile=Baseline:1 			\
 		--dtprofile=LTEBaseline:1 		\
 	        --dtprofile=LTECellConfigEPC:1  	\
                 --dtprofile=LTECellConfigRANPHY:1 	\
                 --dtprofile=LTECellConfigRANMACRLC:1 	\
                 --dtprofile=LTECellConfigRANRRC:1 	\
                 --dtprofile=LTECellConfigRANMobilityIdleModeCommon:1 \
-                --dtprofile=LTECellConfigRANNLLTECell:1 
+                --dtprofile=LTECellConfigRANNLLTECell:1
 
 x-dummy-small-cell-dt.xml: x-dummy-small-cell.xml
 	$(REPORT) $(DUMMY-PROFILE) --report=xml --outfile=$@ $^
 
+gen-hrl: $(TARGETS-HRL)
+	cp $(TARGETS-HRL) ../include
+
+gen-txt: $(TARGETS-TXT)
+
 test:
-	@echo "Do nothing usefull"
 	$(REPORT) -report=text x-dummy-small-cell-dt.xml
 
 clean:
-	$(RM) $(TARGETS) $(TARGETS-DOC) $(X-VENDOR-DOC)
+	$(RM) $(TARGETS) $(TARGETS-DOC) $(X-VENDOR-DOC)  $(TARGETS-HRL)  $(TARGETS-TXT)
+
+REPORTSPECS_EXTRA = xml:.hrl:--plugin=hrl_--report=hrl
 
 include ../report.mk
