--- a/lte-packet-core/Makefile
+++ b/lte-packet-core/Makefile
@@ -1,8 +1,8 @@
 default: all
 
-.PHONY: test gen-hrl 
+.PHONY: test gen-hrl
 
-REPORT = perl -I../scripts/plugins ../scripts/report.pl --include=../base/cwmp --loglevel=error --nowarnbibref
+REPORT = perl -X  -I../scripts/plugins ../scripts/report.pl --include=../base/cwmp --loglevel=error --nowarnbibref
 BASELINE = ../base/cwmp/tr-181-2-4.xml  ../base/cwmp/tr-098-1-6.xml  ../base/cwmp/tr-196-2-0.xml
 
 TARGETS = x-small-cell-mme-1.0-dt.xml 	\
@@ -17,7 +17,7 @@ TARGETS-HRL = $(patsubst %.xml,%.hrl,$(TARGETS))
 
 all: $(TARGETS) x-small-cell-ue-1-0-dt.hrl
 
-doc: $(TARGETS-DOC) 
+doc: $(TARGETS-DOC)
 
 gen-hrl: $(TARGETS-HRL)
 	cp $(TARGETS-HRL) ../include
